# auto-sekai-retriever

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tmp.sh
.github/workflows/: deploy-pages.yml
data/interim/: corpus_raw.jsonl  corpus_review_raw.jsonl
docs/: 00_overview.md  01_implementation.md  02_global_constraints.md  03_phase1_crawl.md  04_phase2_vlm.md  05_phase3_embedding.md  06_phase4_frontend_retrieval.md
public/: index.html  site.webmanifest
public/search/: corpus.json  corpus.review.json  embeddings.meta.json  manifest.json  url.json
pysrc/: test.py
pysrc/auto_sekai_retriever/: __init__.py  config.py
pysrc/auto_sekai_retriever/phase1_crawl/: __init__.py  discover.py  download.py  manifest.py  run.py
pysrc/auto_sekai_retriever/phase2_vlm/: __init__.py  client.py  generate_corpus.py  postprocess.py  prompt.py
pysrc/auto_sekai_retriever/phase3_embed/: generate_embeddings.py  model.py  quantize.py
pysrc/auto_sekai_retriever/utils/: __init__.py  hashing.py  io.py  paths.py
src/: App.css  App.jsx  index.css
src/components/: Info.jsx  Picker.jsx  SearchPicker.jsx  SearchResults.jsx
src/constants/: characterColors.js
src/search/: constants.js  data.js  math.js  queryEmbedder.js
src/utils/: assetPaths.js  imagePath.js
tests/: conftest.py  test_phase1_discover.py  test_phase1_manifest.py  test_phase1_paths.py  test_phase2_postprocess.py  test_phase3_embeddings.py
