[project]
name = "auto-sekai-retriever"
version = "0.1.0"
description = "Offline pipeline for auto-sekai-retriever"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "numpy>=1.26.0",
  "python-dotenv>=1.0.0",
  "pytest>=8,<9",
  "sentence-transformers>=3.0.0",
  "torch>=2.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
